// Copyright (c) Dolittle. All rights reserved.
// Licensed under the MIT license. See LICENSE file in the project root for full license information.

syntax = "proto3";

import "Events/Aggregate.proto";
import "Events/EventCommitResponse.proto";
import "Events/UncommittedEvents.proto";
import "Events/UncommittedAggregateEvents.proto";
import "Events/CommittedAggregateEvents.proto";

package dolittle.runtime.events;

option csharp_namespace = "Dolittle.Runtime.Events";

// Represents the Event Store service
service EventStore {
    rpc Commit(UncommittedEvents) returns(EventCommitResponse);
    rpc CommitForAggregate(UncommittedAggregateEvents) returns(EventCommitResponse);
    rpc FetchForAggregate(Aggregate) returns(CommittedAggregateEvents);
}
