// Copyright (c) Dolittle. All rights reserved.
// Licensed under the MIT license. See LICENSE file in the project root for full license information.

syntax = "proto3";

import "Events/CommittedAggregateEvents.proto";

package dolittle.runtime.events;

option csharp_namespace = "Dolittle.Runtime.Events";

message FetchForAggregateResponse {
    bool success = 1;
    string reason = 2;
    CommittedAggregateEvents events = 3;
}
