// Copyright (c) Dolittle. All rights reserved.
// Licensed under the MIT license. See LICENSE file in the project root for full license information.

syntax = "proto3";

import "Events/UncommittedEvent.proto";

package dolittle.runtime.events;

option csharp_namespace = "Dolittle.Runtime.Events";

message UncommittedAggregateEvents {
    bytes eventSource = 1;
    bytes aggregateRoot = 2;
    uint64 expectedAggregateRootVersion = 3;
    repeated UncommittedEvent events = 4;
}
