// Copyright (c) Dolittle. All rights reserved.
// Licensed under the MIT license. See LICENSE file in the project root for full license information.

syntax = "proto3";

import "Events/UncommittedEvent.proto";

package dolittle.runtime.events;

option csharp_namespace = "Dolittle.Runtime.Events";

message UncommittedEvents {
    repeated UncommittedEvent Events = 1;
}
